# hass-tray-app

./: Cargo.toml  README.md
config/: config.toml
src/: config.rs  main.rs
src/preferences/: mod.rs
src/preferences/linux/: mod.rs
src/preferences/macos/: mod.rs
src/preferences/windows/: mod.rs
