[package]
name = "tiTest"
version = "0.1.0"
authors = ["geoph9 <geoph9@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tray-item = "0.5.0-alpha"
gtk = "0.9"
toml = "0.5.8"
serde = { version = "1.0.125", features = ["derive"]}
